--- a/src/components/Hearder/header.css
+++ b/src/components/Hearder/header.css
@@ -1,3 +1,22 @@
+
+
 nav{
     background-color: rgb(45, 45, 45);
+    padding: 1rem;
+    background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0));;
+}
+a{
+    text-decoration: none;
+    color: aliceblue;
+}
+.nav__container{
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.menu{
+    display: flex;
+    gap: 1rem;
 }
