--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -23,11 +23,24 @@ a{
 .search__area{
     display: flex;
     align-items: center;
-    background-color: white;
-    :hover .icon__search {
-        color: black;
-    }
+    padding: 0.1rem 1rem;
+    border-radius: 100px;
+    gap: 1rem;
+    background-color: rgb(45, 45, 45);
 }
-// .icon__search {
-//     color: black;
-// }
+
+.search__area:hover > input{
+    width: 200px;
+}
+.icon__search{
+    cursor: pointer;
+}
+input {
+    width: 0;
+    outline: none;
+    border: none;
+    background-color: rgb(45, 45, 45);
+    color: white;
+    font-size: 18px;
+    transition: width 0.3s ease;
+}
