--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -21,6 +21,7 @@ a{
     gap: 1rem;
 }
 .search__area{
+    // position: absolute;
     display: flex;
     align-items: center;
     padding: 0.1rem 1rem;
