--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,6 +4,7 @@ footer{
     gap: 1rem;
     margin-top: 2rem;
     padding: 2rem 2rem;
+    background-color: #181a23;
 }
 .img__logo-big{
     width: 150px;
