--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -1,9 +1,13 @@
 
 
 nav{
-    background-color: rgb(45, 45, 45);
+    // background-color: rgb(45, 45, 45);
+    position: fixed;
+    z-index: 100;
+    right: 0;
+    left: 0;
     padding: 1rem;
-    background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0));;
+    background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0));
 }
 a{
     text-decoration: none;
@@ -16,27 +20,28 @@ a{
     justify-content: space-between;
     align-items: center;
 }
+.menu__mobile{
+    display: none;
+}
 .menu{
     display: flex;
     gap: 1rem;
 }
-.search__area{
-    // position: absolute;
+.input{
+    position: relative;
     display: flex;
     align-items: center;
     padding: 0.1rem 1rem;
     border-radius: 100px;
     gap: 1rem;
     background-color: rgb(45, 45, 45);
-}
-
-.search__area:hover > input{
-    width: 200px;
+    // align-items: flex-start;
 }
 .icon__search{
     cursor: pointer;
 }
 input {
+    // position: absolute;
     width: 0;
     outline: none;
     border: none;
@@ -44,4 +49,42 @@ input {
     color: white;
     font-size: 18px;
     transition: width 0.3s ease;
+}
+.active{
+    font-weight: bold;
+}
+.search__area:hover > input{
+    width: 200px;
+}
+input:focus{
+    width: 200px;
+}
+@media screen and (max-width: 800px) {
+    nav{
+        background-color: rgb(45, 45, 45);
+        padding: 0.5rem;
+        background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0.9));
+        position: initial;
+    }
+    .menu__mobile{
+        display: block;
+    }
+    .menu,
+    .login{
+        display: none;
+    }
+    .nav__container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .search__area:hover > input{
+        width: 200px;
+    }
+    .search__area:hover  .menu__mobile{
+        width: 200px;
+    }
+    input:{
+    
+    }
 }
