--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -6,7 +6,7 @@ nav{
     z-index: 100;
     right: 0;
     left: 0;
-    padding: 1rem;
+    padding: .8rem;
     background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0));
 }
 a{
@@ -27,7 +27,7 @@ a{
     display: flex;
     gap: 1rem;
 }
-.input{
+.search__area{
     position: relative;
     display: flex;
     align-items: center;
@@ -45,6 +45,8 @@ input {
     width: 0;
     outline: none;
     border: none;
+    border-radius: 1rem;
+    padding: 0.3rem;
     background-color: rgb(45, 45, 45);
     color: white;
     font-size: 18px;
@@ -62,7 +64,7 @@ input:focus{
 @media screen and (max-width: 800px) {
     nav{
         background-color: rgb(45, 45, 45);
-        padding: 0.5rem;
+        padding: 0.4rem;
         background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0.9));
         position: initial;
     }
@@ -84,7 +86,7 @@ input:focus{
     .search__area:hover  .menu__mobile{
         width: 200px;
     }
-    input:{
-    
-    }
+    // input:{
+    // s
+    // }
 }
