--- a/src/components/Swiper/SwiperList.scss
+++ b/src/components/Swiper/SwiperList.scss
@@ -14,6 +14,9 @@
 .movie-item:hover{
    transform: scale(1);
    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+   .play-btn{
+        height: 20%;
+   }
 }
 .swiper__item-title{
     text-align: center;
@@ -34,4 +37,33 @@
     font-size: 1rem;
     z-index: 100;
 
+}
+.play-btn{
+    font-size: 3rem;
+    position:absolute;
+    bottom: 0;
+    // display: none;
+    width: 100%;
+    text-align: center;
+    height: 0%;
+    background-image:linear-gradient(to top,rgba(0,0,0,0.9),rgba(0,0,0,0));
+    transition: all 0.3s ease;
+}
+.swiper-button-next,
+.swiper-button-prev {
+    top: 0;
+    height: 100%;
+    padding: 1rem;
+    border-radius: 10px;
+    width: auto;
+}
+.swiper-button-next{
+    right: -10px;
+    background-image:linear-gradient(to left ,rgba(0,0,0,0.9),rgba(0,0,0,0));
+}
+.swiper-button-prev{
+    left: -10px;
+    background-image:linear-gradient(to right,rgba(0,0,0,0.9),rgba(0,0,0,0));
+}
+.swiper-button-next::after{
 }
