--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none !important;
+  scroll-behavior: smooth;
 }
 
 code {
