--- a/src/page/MoviePage/Movie.scss
+++ b/src/page/MoviePage/Movie.scss
@@ -64,6 +64,8 @@
     flex-direction: column;
     align-items: center;
     p{
+        width: 150px;
+        text-align: center;
         overflow: hidden;
         white-space: nowrap; 
         text-overflow: ellipsis;
