--- a/src/page/TrangChu/Trangchu.scss
+++ b/src/page/TrangChu/Trangchu.scss
@@ -32,3 +32,16 @@
     position: relative;
     top: -20px;
 }
+@media screen and (max-width: 800px) {
+    .partner{
+        flex-direction: column;
+        gap: 2rem;
+
+        &__left{
+            width: 100%;
+        }
+        &__right{
+            width: 100%;
+        }
+    }
+}
