--- a/src/page/TrangChu/Trangchu.scss
+++ b/src/page/TrangChu/Trangchu.scss
@@ -36,12 +36,22 @@
     .partner{
         flex-direction: column;
         gap: 2rem;
+        margin: 1rem;
 
         &__left{
             width: 100%;
         }
         &__right{
             width: 100%;
+            > div{
+                flex-wrap: wrap;
+            }
+            img{
+                min-width: 140px;
+                width: 25%;
+                border-radius: 1rem;
+                margin: 0.8rem;
+            }
         }
     }
 }
