--- a/src/page/MoviePage/Movie.scss
+++ b/src/page/MoviePage/Movie.scss
@@ -156,7 +156,10 @@
         }
     }
     .frame-film{
-        height: 30vh;
-        width: 80vw;
+        height: 56vh;
+        width: 100vw;
+    }
+    .close{
+        // display: none;
     }
 }
