--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@ footer{
     margin-top: 2rem;
     padding: 2rem 2rem;
     background-color: #181a23;
+    // background-image: url(../../assets/VN-vi-20220801-popsignuptwoweeks-perspective_alpha_website_large.jpg);
 }
 .img__logo-big{
     width: 150px;
