--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -53,7 +53,7 @@ input {
     transition: width 0.3s ease;
 }
 .active{
-    font-weight: bold;
+    // font-weight: bold;
     color: blue;
 }
 .search__area:hover > input{
