--- a/src/page/MoviePage/Movie.scss
+++ b/src/page/MoviePage/Movie.scss
@@ -130,6 +130,7 @@
     gap: 1rem;
     flex-wrap: wrap;
     padding: 2rem;
+    justify-content: space-around;
 }
 .similar{
     position: relative;
