--- a/src/page/ListMovie/ListMovie.scss
+++ b/src/page/ListMovie/ListMovie.scss
@@ -16,6 +16,9 @@
     margin-bottom: 1rem;
     background-image: url(../../assets/VN-vi-20220801-popsignuptwoweeks-perspective_alpha_website_large.jpg);
 }
+.infinite-scroll-component {
+    overflow:hidden;
+}
 
 @media screen and (max-width: 600px) {
     .item{
