--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -6,7 +6,7 @@ nav{
     z-index: 100;
     right: 0;
     left: 0;
-    padding: .8rem;
+    padding: .6rem;
     background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0));
 }
 a{
@@ -65,9 +65,9 @@ input:focus{
 @media screen and (max-width: 800px) {
     nav{
         background-color: rgb(45, 45, 45);
-        padding: 0.4rem;
+        padding: 0.2rem;
         background-image: linear-gradient(180deg,rgba(0,0,0,.9),rgba(0,0,0,0.9));
-        position: initial;
+        position: fixed;
     }
     .menu__mobile{
         display: block;
