--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -1,7 +1,6 @@
 
 
 nav{
-    // background-color: rgb(45, 45, 45);
     position: fixed;
     z-index: 100;
     right: 0;
@@ -70,7 +69,13 @@ input:focus{
         position: fixed;
     }
     .menu__mobile{
+        padding-left: 10px;
         display: block;
+        width: 30px;
+        .menu__icon {
+            width: 100%;
+            height: 100%;
+        }
     }
     .menu,
     .login{
@@ -87,7 +92,11 @@ input:focus{
     .search__area:hover  .menu__mobile{
         width: 200px;
     }
-    // input:{
-    // s
-    // }
+}
+
+@media screen and (max-width: 600px) {
+
+    input:focus ~ nav{
+        display: none;
+    }
 }
