--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -59,3 +59,8 @@ footer{
 .introduce__content{
     color: rgb(208, 208, 208);
 }
+@media screen and (max-width: 600px) {
+    footer{
+        padding: 0.8rem;
+    }
+}
