--- a/src/components/Hearder/header.scss
+++ b/src/components/Hearder/header.scss
@@ -41,6 +41,9 @@ a{
 }
 .icon__search{
     cursor: pointer;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
 }
 input {
     // position: absolute;
@@ -64,6 +67,27 @@ input {
 input:focus{
     width: 200px;
 }
+
+
+// =========  SEARCH =======
+
+.search__table-mobile{
+    position: absolute;
+    margin: auto;
+    width: 100vw;
+    height: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 15px;
+    background-color: black;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
+
+
 @media screen and (max-width: 800px) {
     nav{
         background-color: rgb(45, 45, 45);
